@@ -1,18 +1,13 @@
 package org.goobi.managedbeans;
 
-import java.awt.Color;
-import java.awt.Font;
-import java.awt.Graphics2D;
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayOutputStream;
 /**
  * This file is part of the Goobi Application - a Workflow tool for the support of mass digitization.
  * 
  * Visit the websites for more information.
- *     		- https://goobi.io
- * 			- https://www.intranda.com
- * 			- https://github.com/intranda/goobi
- * 			- http://digiverso.com
+ *          - https://goobi.io
+ *          - https://www.intranda.com
+ *          - https://github.com/intranda/goobi-workflow
+ *          - http://digiverso.com
  * 
  * This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free
  * Software Foundation; either version 2 of the License, or (at your option) any later version.
@@ -31,7 +26,14 @@ import java.io.ByteArrayOutputStream;
  * library, you may extend this exception to your version of the library, but you are not obliged to do so. If you do not wish to do so, delete this
  * exception statement from your version.
  */
+
+import java.awt.Color;
+import java.awt.Font;
+import java.awt.Graphics2D;
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.Serializable;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DecimalFormat;
@@ -49,11 +51,12 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.TreeMap;
 
-import javax.faces.bean.ManagedBean;
-import javax.faces.bean.SessionScoped;
+import javax.enterprise.context.SessionScoped;
 import javax.faces.context.FacesContext;
 import javax.faces.model.SelectItem;
 import javax.imageio.ImageIO;
+import javax.inject.Inject;
+import javax.inject.Named;
 import javax.jms.JMSException;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletOutputStream;
@@ -65,17 +68,18 @@ import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.lang.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.poi.hssf.usermodel.HSSFCell;
-import org.apache.poi.hssf.usermodel.HSSFRow;
-import org.apache.poi.hssf.usermodel.HSSFSheet;
-import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.ss.usermodel.Cell;
 import org.apache.poi.ss.usermodel.Row;
+import org.apache.poi.xssf.usermodel.XSSFCell;
+import org.apache.poi.xssf.usermodel.XSSFRow;
+import org.apache.poi.xssf.usermodel.XSSFSheet;
+import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 import org.apache.poi.xwpf.usermodel.XWPFDocument;
 import org.goobi.api.mq.QueueType;
 import org.goobi.api.mq.TaskTicket;
 import org.goobi.api.mq.TicketGenerator;
 import org.goobi.beans.Docket;
+import org.goobi.beans.LogEntry;
 import org.goobi.beans.Masterpiece;
 import org.goobi.beans.Masterpieceproperty;
 import org.goobi.beans.Process;
@@ -87,7 +91,10 @@ import org.goobi.beans.Template;
 import org.goobi.beans.Templateproperty;
 import org.goobi.beans.User;
 import org.goobi.beans.Usergroup;
+import org.goobi.goobiScript.GoobiScriptManager;
 import org.goobi.goobiScript.GoobiScriptResult;
+import org.goobi.goobiScript.IGoobiScript;
+import org.goobi.production.cli.helper.StringPair;
 import org.goobi.production.enums.LogType;
 import org.goobi.production.enums.PluginGuiType;
 import org.goobi.production.enums.PluginType;
@@ -124,7 +131,6 @@ import de.sub.goobi.export.download.ExportMets;
 import de.sub.goobi.export.download.ExportPdf;
 import de.sub.goobi.export.download.TiffHeader;
 import de.sub.goobi.forms.ProzesskopieForm;
-import de.sub.goobi.forms.SessionForm;
 import de.sub.goobi.helper.BeanHelper;
 import de.sub.goobi.helper.FacesContextHelper;
 import de.sub.goobi.helper.GoobiScript;
@@ -151,8 +157,7 @@ import de.sub.goobi.persistence.managers.StepManager;
 import de.sub.goobi.persistence.managers.TemplateManager;
 import de.sub.goobi.persistence.managers.UserManager;
 import de.sub.goobi.persistence.managers.UsergroupManager;
-import io.goobi.workflow.xslt.XsltPreparatorSimplifiedMetadata;
-import io.goobi.workflow.xslt.XsltPreparatorXmlLog;
+import io.goobi.workflow.xslt.XsltPreparatorDocket;
 import lombok.Getter;
 import lombok.Setter;
 import ugh.exceptions.DocStructHasNoTypeException;
@@ -162,14 +167,15 @@ import ugh.exceptions.ReadException;
 import ugh.exceptions.TypeNotAllowedForParentException;
 import ugh.exceptions.WriteException;
 
-@ManagedBean(name = "ProzessverwaltungForm")
+@Named("ProzessverwaltungForm")
 @SessionScoped
-public class ProcessBean extends BasicBean {
+public class ProcessBean extends BasicBean implements Serializable {
     private static final long serialVersionUID = 2838270843176821134L;
     private static final Logger logger = LogManager.getLogger(ProcessBean.class);
     private Process myProzess = new Process();
     private Step mySchritt = new Step();
     private StatisticsManager statisticsManager;
+
     @Getter
     private List<ProcessCounterObject> myAnzahlList;
     private HashMap<String, Integer> myAnzahlSummary;
@@ -231,8 +237,22 @@ public class ProcessBean extends BasicBean {
     @Setter
     private Process template;
 
+    private List<StringPair> allGoobiScripts;
+
+    @Getter
+    @Setter
+    private boolean createNewStepAllowParallelTask;
+
     @Getter
     private Map<String, List<String>> displayableMetadataMap = new HashMap<>();
+
+    private IStepPlugin currentPlugin;
+
+    @Inject
+    private StepBean bean;
+
+    @Inject
+    private GoobiScriptManager goobiScriptManager;
 
     public ProcessBean() {
         this.anzeigeAnpassen = new HashMap<>();
@@ -241,7 +261,7 @@ public class ProcessBean extends BasicBean {
         /*
          * Vorgangsdatum generell anzeigen?
          */
-        LoginBean login = (LoginBean) Helper.getManagedBeanValue("#{LoginForm}");
+        LoginBean login = Helper.getLoginBean();
         if (login.getMyBenutzer() != null) {
             this.anzeigeAnpassen.put("lockings", login.getMyBenutzer().isDisplayLocksColumn());
             this.anzeigeAnpassen.put("swappedOut", login.getMyBenutzer().isDisplaySwappingColumn());
@@ -257,6 +277,16 @@ public class ProcessBean extends BasicBean {
             showClosedProcesses = login.getMyBenutzer().isDisplayFinishedProcesses();
             showArchivedProjects = login.getMyBenutzer().isDisplayDeactivatedProjects();
             anzeigeAnpassen.put("institution", login.getMyBenutzer().isDisplayInstitutionColumn());
+            anzeigeAnpassen.put("editionDate",
+                    ConfigurationHelper.getInstance().isProcesslistShowEditionData() ? login.getMyBenutzer().isDisplayLastEditionDate() : false);
+            anzeigeAnpassen.put("editionUser",
+                    ConfigurationHelper.getInstance().isProcesslistShowEditionData() ? login.getMyBenutzer().isDisplayLastEditionUser() : false);
+            anzeigeAnpassen.put("editionTask",
+                    ConfigurationHelper.getInstance().isProcesslistShowEditionData() ? login.getMyBenutzer().isDisplayLastEditionTask() : false);
+            if (StringUtils.isNotBlank(login.getMyBenutzer().getProcessListDefaultSortField())) {
+                sortierung = login.getMyBenutzer().getProcessListDefaultSortField() + login.getMyBenutzer().getProcessListDefaultSortOrder();
+            }
+
         } else {
             this.anzeigeAnpassen.put("lockings", false);
             this.anzeigeAnpassen.put("swappedOut", false);
@@ -304,7 +334,7 @@ public class ProcessBean extends BasicBean {
     }
 
     public String editProcess() {
-        Reload();
+        reload();
 
         return "process_edit";
     }
@@ -390,8 +420,15 @@ public class ProcessBean extends BasicBean {
         importTicket.getProperties().put("rule", "Autodetect rule");
         importTicket.getProperties().put("deleteOldProcess", "true");
         try {
-            TicketGenerator.submitTicket(importTicket, false);
+            TicketGenerator.submitInternalTicket(importTicket, QueueType.FAST_QUEUE, "DatabaseInformationTicket", 0);
         } catch (JMSException e) {
+            logger.error("Error adding TaskTicket to queue", e);
+            LogEntry errorEntry = LogEntry.build(this.myProzess.getId())
+                    .withType(LogType.ERROR)
+                    .withContent("Error reading metadata for process" + this.myProzess.getTitel())
+                    .withCreationDate(new Date())
+                    .withUsername("automatic");
+            ProcessManager.saveLogEntry(errorEntry);
         }
     }
 
@@ -467,8 +504,8 @@ public class ProcessBean extends BasicBean {
     }
 
     public String FilterAktuelleProzesseOfGoobiScript(String status) {
-        SessionForm sf = (SessionForm) Helper.getManagedBeanValue("#{SessionForm}");
-        List<GoobiScriptResult> resultList = sf.getGsm().getGoobiScriptResults();
+
+        List<GoobiScriptResult> resultList = Helper.getSessionBean().getGsm().getGoobiScriptResults();
         filter = "\"id:";
         for (GoobiScriptResult gsr : resultList) {
             if (gsr.getResultType().toString().equals(status)) {
@@ -520,7 +557,7 @@ public class ProcessBean extends BasicBean {
         FilterVorlagen();
         if (this.paginator.getTotalResults() == 1) {
             Process einziger = (Process) this.paginator.getList().get(0);
-            ProzesskopieForm pkf = (ProzesskopieForm) Helper.getManagedBeanValue("#{ProzesskopieForm}");
+            ProzesskopieForm pkf = (ProzesskopieForm) Helper.getBeanByName("ProzesskopieForm", ProzesskopieForm.class);
             pkf.setProzessVorlage(einziger);
             return pkf.Prepare();
         } else {
@@ -699,26 +736,96 @@ public class ProcessBean extends BasicBean {
      */
 
     public String SchrittNeu() {
-        this.mySchritt = new Step();
+        // Process is needed for the predefined order
+        this.createNewStepAllowParallelTask = false;
+        this.mySchritt = new Step(this.myProzess);
         this.modusBearbeiten = "schritt";
         return "process_edit_step";
     }
 
-    public void SchrittUebernehmen() {
+    public String SchrittUebernehmen() {
+
+        // Still on page when order is out of range (order < 1)
+        if (this.mySchritt.getReihenfolge() != null && this.mySchritt.getReihenfolge() < 1) {
+            this.modusBearbeiten = "schritt";
+            //this.createNewStepAllowParallelTask = false;
+            Helper.setFehlerMeldung("Order may not be less than 1. (Is currently " + this.mySchritt.getReihenfolge() + ")");
+            return "process_edit_step";
+        }
+
+        if (mySchritt.isTypAutomatisch()) {
+            int numberOfActions = 0;
+            if (mySchritt.isDelayStep()) {
+                numberOfActions = numberOfActions + 1;
+            }
+            if (mySchritt.isHttpStep()) {
+                numberOfActions = numberOfActions + 1;
+            }
+            if (mySchritt.isTypExportDMS()) {
+                numberOfActions = numberOfActions + 1;
+            }
+            if (mySchritt.getTypScriptStep()) {
+                numberOfActions = numberOfActions + 1;
+            }
+            if (StringUtils.isNotBlank(mySchritt.getStepPlugin()) && !mySchritt.isDelayStep() && !mySchritt.isTypExportDMS()) {
+                numberOfActions = numberOfActions + 1;
+            }
+            if (numberOfActions > 1) {
+                Helper.setFehlerMeldung("step_error_to_many_actions");
+                modusBearbeiten = "schritt";
+                return "process_edit_step";
+            }
+        }
         this.mySchritt.setEditTypeEnum(StepEditType.ADMIN);
         mySchritt.setBearbeitungszeitpunkt(new Date());
-        User ben = (User) Helper.getManagedBeanValue("#{LoginForm.myBenutzer}");
+        User ben = Helper.getCurrentUser();
         if (ben != null) {
             mySchritt.setBearbeitungsbenutzer(ben);
         }
-        if (!myProzess.getSchritte().contains(mySchritt)) {
+        //This is needed later when the page is left. (Next page may be different)
+        boolean createNewStep = !myProzess.getSchritte().contains(mySchritt);
+
+        // Create new step and add it to process
+        if (createNewStep) {
+            // When parallel tasks aren't allowed, all steps
+            // with higher order have to increment their order
+            // Otherwise when no other step exists with the same order,
+            // this step can simply inserted without any shifts of orders
+            if (!this.createNewStepAllowParallelTask && this.myProzess.containsStepOfOrder(this.mySchritt.getReihenfolge().intValue())) {
+                this.incrementOrderOfHigherSteps();
+            }
+
+            // Add step to process
             this.myProzess.getSchritte().add(this.mySchritt);
             this.mySchritt.setProzess(this.myProzess);
+
         }
+
         Speichern();
         updateUsergroupPaginator();
         updateUserPaginator();
-        Reload();
+        reload();
+
+        this.modusBearbeiten = "";
+        return "process_edit_step";
+    }
+
+    // Increment the order of all steps coming after this.mySchritt
+    // this.mySchritt is explicitly excluded here, that means
+    // when you insert this.mySchritt into this.myProzess before calling this method,
+    // this.mySchritt will keep its order
+    public void incrementOrderOfHigherSteps() {
+        List<Step> steps = this.myProzess.getSchritte();
+        Step step;
+        int order;
+        for (int i = 0; i < steps.size(); i++) {
+            step = steps.get(i);
+            order = step.getReihenfolge();
+            if (order >= this.mySchritt.getReihenfolge() && step != this.mySchritt) {
+                step.setReihenfolge(order + 1);
+                this.saveStepInStepManager(step);
+            }
+        }
     }
 
     public String SchrittLoeschen() {
@@ -874,6 +981,20 @@ public class ProcessBean extends BasicBean {
         ExportMets export = new ExportMets();
         try {
             export.startExport(this.myProzess);
+            Helper.addMessageToProcessLog(this.myProzess.getId(), LogType.DEBUG, "Started METS export using 'ExportMets'.");
+        } catch (Exception e) {
+            String[] parameter = { "METS", this.myProzess.getTitel() };
+
+            Helper.setFehlerMeldung(Helper.getTranslation("BatchExportError", parameter), e);
+            //            ;An error occured while trying to export METS file for: " + this.myProzess.getTitel(), e);
+            logger.error("ExportMETS error", e);
+        }
+    }
+
+    public void downloadMets() {
+        ExportMets export = new ExportMets();
+        try {
+            export.downloadMets(this.myProzess);
             Helper.addMessageToProcessLog(this.myProzess.getId(), LogType.DEBUG, "Started METS export using 'ExportMets'.");
         } catch (Exception e) {
             String[] parameter = { "METS", this.myProzess.getTitel() };
@@ -1273,37 +1394,109 @@ public class ProcessBean extends BasicBean {
         this.modusBearbeiten = modusBearbeiten;
     }
 
-    public String reihenfolgeUp() {
-        this.mySchritt.setReihenfolge(Integer.valueOf(this.mySchritt.getReihenfolge().intValue() - 1));
+    public String decrementOrder() {
+        int oldOrder = Integer.valueOf(this.mySchritt.getReihenfolge().intValue());
+
+        if (oldOrder > 1) {
+            this.mySchritt.setReihenfolge(oldOrder - 1);
+            this.saveStepInStepManager(this.mySchritt);
+        }
+        return this.reload();
+    }
+
+    public String incrementOrder() {
+        int oldOrder = Integer.valueOf(this.mySchritt.getReihenfolge().intValue());
+        this.mySchritt.setReihenfolge(oldOrder + 1);
+
+        this.saveStepInStepManager(this.mySchritt);
+        return this.reload();
+    }
+
+    public String exchangeTaskOrderDownwards() {
+        return this.exchangeTaskOrder(-1);
+    }
+
+    public String exchangeTaskOrderUpwards() {
+        return this.exchangeTaskOrder(1);
+    }
+
+    //direction:
+    //+1 = up   (priority 1 -> 2 -> 3)
+    //-1 = down (priority 3 -> 2 -> 1)
+    public String exchangeTaskOrder(final int direction) {
+
+        List<Step> steps = this.myProzess.getSchritte();
+        int baseOrder = this.mySchritt.getReihenfolge().intValue();
+        int targetOrder = this.getNextAvailableOrder(baseOrder, direction);//-1 means downwards, +1 means upwards
+
+        if (targetOrder != baseOrder) {// Otherwise there is no next order, then nothing happens
+            int currentOrder;
+
+            // Set all steps with targetOrder to baseOrder
+            for (int i = 0; i < steps.size(); i++) {
+                currentOrder = steps.get(i).getReihenfolge().intValue();
+
+                if (currentOrder == targetOrder) {
+                    steps.get(i).setReihenfolge(baseOrder);
+                    this.saveStepInStepManager(steps.get(i));
+                }
+            }
+            // Set the step (with baseOrder) to targetOrder
+            this.mySchritt.setReihenfolge(targetOrder);
+            this.saveStepInStepManager(this.mySchritt);
+        }
+        return this.reload();
+    }
+
+    //direction:
+    //+1 = up   (priority 1 -> 2 -> 3)
+    //-1 = down (priority 3 -> 2 -> 1)
+    private int getNextAvailableOrder(final int baseOrder, final int direction) {
+
+        List<Step> steps = this.myProzess.getSchritte();
+        int targetOrder = -1;
+        int currentOrder;
+
+        for (int i = 0; i < steps.size(); i++) {
+            currentOrder = steps.get(i).getReihenfolge().intValue();
+            // Is baseOrder < currentOrder < targetOrder or targetOrder undefined (-1)?
+            if (direction == -1) {//downwards
+
+                if (currentOrder < baseOrder) {
+                    if (targetOrder == -1 || (targetOrder != -1 && currentOrder > targetOrder)) {
+                        targetOrder = currentOrder;
+                    }
+                }
+                // Is targetOrder < currentOrder < baseOrder or targetOrder undefined (-1)?
+            } else if (direction == 1) {//upwards
+
+                if (currentOrder > baseOrder) {
+                    if (targetOrder == -1 || (targetOrder != 1 && currentOrder < targetOrder)) {
+                        targetOrder = currentOrder;
+                    }
+                }
+            }
+        }
+        // When there is no next order, the given order will be returned
+        return (targetOrder > 0 ? targetOrder : baseOrder);
+    }
+
+    private void saveStepInStepManager(Step step) {
         try {
-            StepManager.saveStep(mySchritt);
-            Helper.addMessageToProcessLog(mySchritt.getProcessId(), LogType.DEBUG,
-                    "Changed step order for step '" + mySchritt.getTitel() + "' to position " + mySchritt.getReihenfolge() + " in process details.");
+            StepManager.saveStep(step);
+            String message = "Changed step order for step '" + step.getTitel() + "' to position " + step.getReihenfolge()
+                    + " in process details.";
+            Helper.addMessageToProcessLog(step.getProcessId(), LogType.DEBUG, message);
             // set list to null to reload list of steps in new order
-            myProzess.setSchritte(null);
+            this.myProzess.setSchritte(null);
         } catch (DAOException e) {
             logger.error(e);
         }
-        return Reload();
     }
 
-    public String reihenfolgeDown() {
-        this.mySchritt.setReihenfolge(Integer.valueOf(this.mySchritt.getReihenfolge().intValue() + 1));
-        try {
-            StepManager.saveStep(mySchritt);
-            Helper.addMessageToProcessLog(mySchritt.getProcessId(), LogType.DEBUG,
-                    "Changed step order for step '" + mySchritt.getTitel() + "' to position " + mySchritt.getReihenfolge() + " in process details.");
-            // set list to null to reload list of steps in new order
-            myProzess.setSchritte(null);
-        } catch (DAOException e) {
-            logger.error(e);
-        }
-        return Reload();
-    }
-
-    public String Reload() {
-        if (myProzess != null && myProzess.getId() != null) {
-            myProzess = ProcessManager.getProcessById(myProzess.getId());
+    public String reload() {
+        if (this.myProzess != null && this.myProzess.getId() != null) {
+            this.myProzess = ProcessManager.getProcessById(this.myProzess.getId());
         }
         return "";
     }
@@ -1352,7 +1545,7 @@ public class ProcessBean extends BasicBean {
     public List<SelectItem> getProjektAuswahlListe() throws DAOException {
         List<SelectItem> myProjekte = new ArrayList<>();
         List<Project> temp = null;
-        LoginBean login = (LoginBean) Helper.getManagedBeanValue("#{LoginForm}");
+        LoginBean login = Helper.getLoginBean();
         if (login != null && !login.hasRole(UserRole.Workflow_General_Show_All_Projects.name())) {
             temp = ProjectManager.getProjectsForUser(login.getMyBenutzer(), false);
         } else {
@@ -1452,7 +1645,7 @@ public class ProcessBean extends BasicBean {
     }
 
     private void CalcMetadataAndImages(List<Process> inListe) throws IOException, InterruptedException, SwapException, DAOException {
-        //		XmlArtikelZaehlen zaehlen = new XmlArtikelZaehlen();
+        //      XmlArtikelZaehlen zaehlen = new XmlArtikelZaehlen();
         this.myAnzahlList = new ArrayList<>();
         int allMetadata = 0;
         int allDocstructs = 0;
@@ -1520,10 +1713,10 @@ public class ProcessBean extends BasicBean {
         }
 
         /* die Durchschnittsberechnung durchführen */
-        //		int faktor = 1;
-        //		if (this.myAnzahlList != null && this.myAnzahlList.size() > 0) {
-        //			faktor = this.myAnzahlList.size();
-        //		}
+        //      int faktor = 1;
+        //      if (this.myAnzahlList != null && this.myAnzahlList.size() > 0) {
+        //          faktor = this.myAnzahlList.size();
+        //      }
         this.myAnzahlSummary = new HashMap<>();
         this.myAnzahlSummary.put("sumProcesses", this.myAnzahlList.size());
         this.myAnzahlSummary.put("sumMetadata", allMetadata);
@@ -1615,6 +1808,24 @@ public class ProcessBean extends BasicBean {
     }
 
     /**
+     * Return a list of all visible GoobiScript commands with their action name and the sample call
+     * 
+     * @return the list of GoobiScripts
+     */
+    public List<StringPair> getAllGoobiScripts() {
+        if (allGoobiScripts == null) {
+            allGoobiScripts = new ArrayList<>();
+            for (IGoobiScript gs : goobiScriptManager.getAvailableGoobiScripts()) {
+                if (gs.isVisible()) {
+                    allGoobiScripts.add(new StringPair(gs.getAction(), gs.getSampleCall()));
+                }
+            }
+        }
+        Collections.sort(allGoobiScripts, new StringPair.OneComparator());
+        return allGoobiScripts;
+    }
+
+    /**
      * Starte GoobiScript über alle Treffer
      */
     public String GoobiScriptHits() {
@@ -1624,8 +1835,8 @@ public class ProcessBean extends BasicBean {
         } else {
             resetHitsCount();
             GoobiScript gs = new GoobiScript();
-            return gs.execute(this.paginator.getIdList(), this.goobiScript);
-
+            gs.execute(this.paginator.getIdList(), this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -1644,7 +1855,8 @@ public class ProcessBean extends BasicBean {
             for (Process p : (List<Process>) paginator.getList()) {
                 idList.add(p.getId());
             }
-            return gs.execute(idList, this.goobiScript);
+            gs.execute(idList, this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -1665,7 +1877,8 @@ public class ProcessBean extends BasicBean {
                 }
             }
             GoobiScript gs = new GoobiScript();
-            return gs.execute(idList, this.goobiScript);
+            gs.execute(idList, this.goobiScript, goobiScriptManager);
+            return "process_all?faces-redirect=true";
         }
     }
 
@@ -1872,20 +2085,18 @@ public class ProcessBean extends BasicBean {
     /**
      * starts generation of xml logfile for current process
      */
-
     public void generateSimplifiedMetadataFile() {
-        this.myProzess.downloadSimplifiedMetadataAsPDF();  
+        this.myProzess.downloadSimplifiedMetadataAsPDF();
     }
-    
+
     /**
      * starts generation of xml logfile for current process
      */
 
     public void CreateXML() {
-        XsltPreparatorXmlLog xmlExport = new XsltPreparatorXmlLog();
+        XsltPreparatorDocket xmlExport = new XsltPreparatorDocket();
         try {
-            LoginBean login = (LoginBean) Helper.getManagedBeanValue("#{LoginForm}");
-            String ziel = login.getMyBenutzer().getHomeDir() + this.myProzess.getTitel() + "_log.xml";
+            String ziel = Helper.getCurrentUser().getHomeDir() + this.myProzess.getTitel() + "_log.xml";
             xmlExport.startExport(this.myProzess, ziel);
         } catch (IOException e) {
             Helper.setFehlerMeldung("could not write logfile to home directory: ", e);
@@ -1915,7 +2126,7 @@ public class ProcessBean extends BasicBean {
 
             try {
                 ServletOutputStream out = response.getOutputStream();
-                XsltPreparatorXmlLog export = new XsltPreparatorXmlLog();
+                XsltPreparatorDocket export = new XsltPreparatorDocket();
                 export.startTransformation(out, this.myProzess, this.selectedXslt);
                 out.flush();
             } catch (ConfigurationException e) {
@@ -1935,7 +2146,7 @@ public class ProcessBean extends BasicBean {
 
     public void setMyProcessId(String id) {
         try {
-            int myid = new Integer(id);
+            int myid = Integer.valueOf(id).intValue();
             this.myProzess = ProcessManager.getProcessById(myid);
             //        } catch (DAOException e) {
             //            logger.error(e);
@@ -1993,7 +2204,7 @@ public class ProcessBean extends BasicBean {
                 response.setContentType(contentType);
                 response.setHeader("Content-Disposition", "attachment;filename=\"export.xls\"");
                 ServletOutputStream out = response.getOutputStream();
-                HSSFWorkbook wb = (HSSFWorkbook) this.myCurrentTable.getExcelRenderer().getRendering();
+                XSSFWorkbook wb = (XSSFWorkbook) this.myCurrentTable.getExcelRenderer().getRendering();
                 wb.write(out);
                 out.flush();
                 facesContext.responseComplete();
@@ -2090,18 +2301,18 @@ public class ProcessBean extends BasicBean {
                 response.setHeader("Content-Disposition", "attachment;filename=\"search.pdf\"");
                 ServletOutputStream out = response.getOutputStream();
                 SearchResultHelper sch = new SearchResultHelper();
-                HSSFWorkbook wb =
+                XSSFWorkbook wb =
                         sch.getResult(prepareSearchColumnData(), this.filter, sortList(), this.showClosedProcesses, this.showArchivedProjects);
 
-                List<List<HSSFCell>> rowList = new ArrayList<>();
-                HSSFSheet mySheet = wb.getSheetAt(0);
+                List<List<XSSFCell>> rowList = new ArrayList<>();
+                XSSFSheet mySheet = wb.getSheetAt(0);
                 Iterator<Row> rowIter = mySheet.rowIterator();
                 while (rowIter.hasNext()) {
-                    HSSFRow myRow = (HSSFRow) rowIter.next();
+                    XSSFRow myRow = (XSSFRow) rowIter.next();
                     Iterator<Cell> cellIter = myRow.cellIterator();
-                    List<HSSFCell> row = new ArrayList<>();
+                    List<XSSFCell> row = new ArrayList<>();
                     while (cellIter.hasNext()) {
-                        HSSFCell myCell = (HSSFCell) cellIter.next();
+                        XSSFCell myCell = (XSSFCell) cellIter.next();
                         row.add(myCell);
                     }
                     rowList.add(row);
@@ -2119,10 +2330,10 @@ public class ProcessBean extends BasicBean {
 
                     for (int i = 0; i < rowList.size(); i++) {
 
-                        List<HSSFCell> row = rowList.get(i);
+                        List<XSSFCell> row = rowList.get(i);
                         table.completeRow();
                         for (int j = 0; j < row.size(); j++) {
-                            HSSFCell myCell = row.get(j);
+                            XSSFCell myCell = row.get(j);
                             String stringCellValue = myCell.toString();
                             table.addCell(stringCellValue);
                         }
@@ -2150,12 +2361,12 @@ public class ProcessBean extends BasicBean {
             HttpServletResponse response = (HttpServletResponse) facesContext.getExternalContext().getResponse();
             try {
                 ServletContext servletContext = (ServletContext) facesContext.getExternalContext().getContext();
-                String contentType = servletContext.getMimeType("search.xls");
+                String contentType = servletContext.getMimeType("search.xlsx");
                 response.setContentType(contentType);
-                response.setHeader("Content-Disposition", "attachment;filename=\"search.xls\"");
+                response.setHeader("Content-Disposition", "attachment;filename=\"search.xlsx\"");
                 ServletOutputStream out = response.getOutputStream();
                 SearchResultHelper sch = new SearchResultHelper();
-                HSSFWorkbook wb =
+                XSSFWorkbook wb =
                         sch.getResult(prepareSearchColumnData(), this.filter, sortList(), this.showClosedProcesses, this.showArchivedProjects);
 
                 wb.write(out);
@@ -2593,8 +2804,6 @@ public class ProcessBean extends BasicBean {
         return FilterVorlagen();
     }
 
-    private IStepPlugin currentPlugin;
-
     public String startPlugin() {
         if (StringUtils.isNotBlank(mySchritt.getStepPlugin())) {
             if (mySchritt.isTypExportDMS()) {
@@ -2612,31 +2821,25 @@ public class ProcessBean extends BasicBean {
                 currentPlugin = (IStepPlugin) PluginLoader.getPluginByTitle(PluginType.Step, mySchritt.getStepPlugin());
                 if (currentPlugin != null) {
                     currentPlugin.initialize(mySchritt, "/process_edit");
-                    if (currentPlugin.getPluginGuiType() == PluginGuiType.FULL) {
-                        FacesContext context = FacesContextHelper.getCurrentFacesContext();
-                        Map<String, Object> requestMap = context.getExternalContext().getSessionMap();
-                        StepBean bean = (StepBean) requestMap.get("AktuelleSchritteForm");
-                        if (bean == null) {
-                            bean = new StepBean();
-                            requestMap.put("AktuelleSchritteForm", bean);
-                        }
+                    if (currentPlugin.getPluginGuiType() == PluginGuiType.FULL || currentPlugin.getPluginGuiType() == PluginGuiType.PART_AND_FULL) {
+
                         bean.setMyPlugin(currentPlugin);
                         String mypath = currentPlugin.getPagePath();
                         currentPlugin.execute();
                         return mypath;
                     } else if (currentPlugin.getPluginGuiType() == PluginGuiType.PART) {
-                        FacesContext context = FacesContextHelper.getCurrentFacesContext();
-                        Map<String, Object> requestMap = context.getExternalContext().getSessionMap();
-                        StepBean bean = (StepBean) requestMap.get("AktuelleSchritteForm");
-                        if (bean == null) {
-                            bean = new StepBean();
-                            requestMap.put("AktuelleSchritteForm", bean);
-                        }
+                        //                        FacesContext context = FacesContextHelper.getCurrentFacesContext();
+                        //                        Map<String, Object> requestMap = context.getExternalContext().getSessionMap();
+                        //                        StepBean bean = (StepBean) requestMap.get("AktuelleSchritteForm");
+                        //                        if (bean == null) {
+                        //                            bean = new StepBean();
+                        //                            requestMap.put("AktuelleSchritteForm", bean);
+                        //                        }
+
                         bean.setMyPlugin(currentPlugin);
                         String mypath = "/uii/task_edit_simulator";
                         currentPlugin.execute();
                         return mypath;
-
                     } else if (currentPlugin.getPluginGuiType() == PluginGuiType.NONE) {
                         currentPlugin.execute();
                         currentPlugin.finish();
@@ -2679,7 +2882,7 @@ public class ProcessBean extends BasicBean {
         FacesContext facesContext = FacesContextHelper.getCurrentFacesContext();
         if (!facesContext.getResponseComplete()) {
 
-            org.jdom2.Document doc = new XsltPreparatorXmlLog().createExtendedDocument(myProzess);
+            org.jdom2.Document doc = new XsltPreparatorDocket().createExtendedDocument(myProzess);
 
             String outputFileName = myProzess.getId() + "_db_export.xml";
 
